--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
 ﻿= Changelog =
 
+21.8. - Added filters for mobilizujeme.cz, forum.mobilmania.sk and two general filters for "sklik"
 19.8. - Imported initial changelog, changes are from 17.8.
