--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 ﻿= Changelog =
 
+22.8. - Removed ||c.mfstatic.cz/js/advantage_mf.js filter, because this filter caused some problems on f1sport.autorevue.cz
 21.8. - Added filters for mobilizujeme.cz, forum.mobilmania.sk and two general filters for "sklik"
 19.8. - Imported initial changelog, changes are from 17.8.
