Added filters + updated changelog
Added filters for amateri.cz

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 ﻿= Changelog =
 
+29.9. - Added filters for amateri.sk
 21.9. - Added filters for mp3s.nadruhou.net + videacesky.cz 
 14.9. - Updated filter for azet.sk, added filters for tu-ke.com + csfd.cz, added white-list filter for iboys.cz
 05.9. - Added filter ||eserial.cz/liftago2.jpg for blocking image ad on eserial.cz
