Added experimental filter + updated changelog
Added experimental filter for svet-it.sk

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,6 @@
 ﻿= Changelog =
 
-05.10. - Added filters for sme.sk
+05.10. - Added filters for sme.sk, experimental filter for svet-it.sk
 29.9.  - Added filters for amateri.sk
 21.9.  - Added filters for mp3s.nadruhou.net + videacesky.cz 
 14.9.  - Updated filter for azet.sk, added filters for tu-ke.com + csfd.cz, added white-list filter for iboys.cz
