--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 ﻿= Changelog =
 
+26.10. - Added filters for akoviazatkravatu.sk
 05.10. - Added filters for sme.sk, experimental filter for svet-it.sk
 29.9.  - Added filters for amateri.sk
 21.9.  - Added filters for mp3s.nadruhou.net + videacesky.cz 
