Added and updated filters + updated changelog
Added filters for akoviazatkravatu.sk, stream.cz, devbook.cz,
podnikovyzpravodaj.cz, itnews.sk, kalkulacka-hypoteka.cz,
karaoketexty.cz, navratdoreality.cz, smsbrana.cz

Updated filters for videacesky.cz, blesk.cz

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,8 @@
 ﻿= Changelog =
 
-26.10. - Added filters for akoviazatkravatu.sk
+26.10. - Added filters for akoviazatkravatu.sk, stream.cz, devbook.cz, podnikovyzpravodaj.cz, itnews.sk, kalkulacka-hypoteka.cz, karaoketexty.cz,
+         navratdoreality.cz, smsbrana.cz 
+         Updated filters for videacesky.cz, blesk.cz 
 05.10. - Added filters for sme.sk, experimental filter for svet-it.sk
 29.9.  - Added filters for amateri.sk
 21.9.  - Added filters for mp3s.nadruhou.net + videacesky.cz 
