Added filter + updated changelog
Added filter for warforum.cz

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,6 @@
 ﻿= Changelog =
 
-29.10. - Added filters for auto.cz and blesk.cz
+29.10. - Added filters for auto.cz, blesk.cz and warforum.cz
 26.10. - Added filters for akoviazatkravatu.sk, stream.cz, devbook.cz, podnikovyzpravodaj.cz, itnews.sk, kalkulacka-hypoteka.cz, karaoketexty.cz,
          navratdoreality.cz, smsbrana.cz 
          Updated filters for videacesky.cz, blesk.cz 
