--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
 ﻿= Changelog =
 
+31.10. - Added filters for tipos.sk, nejlevnejsiramy.cz, kinotip.cz and doktorka.cz
+30.10. - Updated filters for pcforum.sk
 29.10. - Added filters for auto.cz, blesk.cz and warforum.cz
 26.10. - Added filters for akoviazatkravatu.sk, stream.cz, devbook.cz, podnikovyzpravodaj.cz, itnews.sk, kalkulacka-hypoteka.cz, karaoketexty.cz,
          navratdoreality.cz, smsbrana.cz 
