--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,9 +1,13 @@
 ﻿= Changelog =
 
+14.11. - Added filters for hojko.com, tipcars.com, toplist.cz, lenzabava.sk
+         Updated filters for sms.cz, tv.sms.cz, azet.sk, topky.sk and zoznam.sk
+         Removed bad filters for pcforum.sk
 31.10. - Added filters for tipos.sk, nejlevnejsiramy.cz, kinotip.cz and doktorka.cz
 30.10. - Updated filters for pcforum.sk
 29.10. - Added filters for auto.cz, blesk.cz and warforum.cz
-26.10. - Added filters for akoviazatkravatu.sk, stream.cz, devbook.cz, podnikovyzpravodaj.cz, itnews.sk, kalkulacka-hypoteka.cz, karaoketexty.cz,
+26.10. - Added filters for akoviazatkravatu.sk, stream.cz, devbook.cz, podnikovyzpravodaj.cz, itnews.sk,
+         kalkulacka-hypoteka.cz, karaoketexty.cz,
          navratdoreality.cz, smsbrana.cz 
          Updated filters for videacesky.cz, blesk.cz 
 05.10. - Added filters for sme.sk, experimental filter for svet-it.sk
