--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 ﻿= Changelog =
 
+28.11. - Added and updated filters for ourphorum.com, best4you.sk, webshare.cz, europa2.sk, cucaj.sk, lamky.net
 17.11. - Added filter for spartak.sk
 14.11. - Added filters for hojko.com, tipcars.com, toplist.cz, lenzabava.sk
          Updated filters for sms.cz, tv.sms.cz, azet.sk, topky.sk and zoznam.sk
