--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,7 +2,7 @@
 
 30.11. - Added filters and updated for simpsonovi-tv.cz, webshare.cz, war-forum.net, warmacher.com,
          warezforum.cz, filmy-zdarma.com, war4all.com, poweruploaders.eu, War-Portal.eu, War-City.eu, 
-         DownLand.eu, iStahuj.eu, BestWar.eu, w-source.net 
+         DownLand.eu, iStahuj.eu, BestWar.eu, w-source.net, azet.sk 
 28.11. - Added and updated filters for ourphorum.com, best4you.sk, webshare.cz, europa2.sk, cucaj.sk, 
          lamky.net
 17.11. - Added filter for spartak.sk
