--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 ﻿= Changelog =
 
+03.12. - Updated filters for zive.cz
 30.11. - Added filters and updated for simpsonovi-tv.cz, webshare.cz, war-forum.net, warmacher.com,
          warezforum.cz, filmy-zdarma.com, war4all.com, poweruploaders.eu, War-Portal.eu, War-City.eu, 
          DownLand.eu, iStahuj.eu, BestWar.eu, w-source.net, azet.sk 
