--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 ﻿= Changelog =
 
+07.12. - Added whitelist filters for reklama-praha.cz and reklama-horovice.cz
 05.12. - Updated filters for sme.sk
 03.12. - Updated filters for zive.cz and stream.cz
 30.11. - Added filters and updated for simpsonovi-tv.cz, webshare.cz, war-forum.net, warmacher.com,
