--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 ﻿= Changelog =
 
+24.12. - Added filters for onlinefilmy.tv
 23.12. - Updated filter for digitalportal.sk
 14.12. - Added filters for gamepark.cz, rozzlobenimuzi.com, michalovskespravy.sk, karaoketexty.cz,
          blbosti.cz, alkoholik.cz, androidportal.sk, e15.cz and busportal.cz 
