Added filters and updated change log
Added filters for autobazar.cz, blesk.cz, games.tiscali.cz, lamer.cz,
skjalovec.com, androidportal.zoznam.sk, vii.sk

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
-﻿= Changelog =
+= Changelog =
 
+18.01. - Added filters for autobazar.cz, blesk.cz, games.tiscali.cz,lamer.cz, skjalovec.com, 
+         androidportal.zoznam.sk, vii.sk
 24.12. - Added filters for onlinefilmy.tv
 23.12. - Updated filter for digitalportal.sk
 14.12. - Added filters for gamepark.cz, rozzlobenimuzi.com, michalovskespravy.sk, karaoketexty.cz,
