Removed problematic filter
Filter for androidportal.sk was removed, this filter caused that some
images weren’t properly loaded
(they weren’t ads anyway)

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 = Changelog =
 
+21.01. - Removed problematic filter for androidportal.sk
 18.01. - Added filters for autobazar.cz, blesk.cz, games.tiscali.cz,lamer.cz, skjalovec.com, 
          androidportal.zoznam.sk, vii.sk
 24.12. - Added filters for onlinefilmy.tv
