Pridané a aktualizované filtre
Do zoznamu filtrov boli pridané a aktualizované filtre, viď súbor
CHANGELOG

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
 = Zoznam zmien =
 
+21.02. - Pridané filtre pre libise.eu a mladypodnikatel.cz
+         Aktualizované filtre pre stream.cz
 07.02. - Pridané filtre pre bydlimekvalitne.cz, esemes.cz, hiking.sk, hymim.cz, linuxexpres.cz, primat.cz,
          ourphorum.com, sauto.cz, zing.cz
          Aktualizované filtre pre befun.cz, heureka.cz, heureka.sk, kinotip.in, warcenter.cz
