Pridané a aktualizované filtre
Do zoznamu filtrov boli pridané a aktualizované filtre, viď súbor
CHANGELOG

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
 = Zoznam zmien =
 
+04.03. - Pridané filtre pre filmycz.com, mrk.cz, onlajny.com, realitygo.cz, sazka.cz, statnisprava.cz
+         Aktualizované filtre pre warforum.cz
 21.02. - Pridané filtre pre libise.eu a mladypodnikatel.cz
          Aktualizované filtre pre stream.cz
 07.02. - Pridané filtre pre bydlimekvalitne.cz, esemes.cz, hiking.sk, hymim.cz, linuxexpres.cz, primat.cz,
