--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 = Zoznam zmien =
 
+05.03. - Vymazaný nevhodný filter pre primat.cz
 04.03. - Pridané filtre pre filmycz.com, mrk.cz, onlajny.com, realitygo.cz, sazka.cz, statnisprava.cz
          Aktualizované filtre pre warforum.cz
 21.02. - Pridané filtre pre libise.eu a mladypodnikatel.cz
