--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,5 @@
 = Zoznam zmien =
-
+11.03. - Pridané anti-adblock filtre pre titulky.com
 05.03. - Vymazaný nevhodný filter pre primat.cz
 04.03. - Pridané filtre pre filmycz.com, mrk.cz, onlajny.com, realitygo.cz, sazka.cz, statnisprava.cz
          Aktualizované filtre pre warforum.cz
