Pridané, aktualizované a vymazané filtre
Viď CHANGELOG

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
 = Zoznam zmien =
+
+17.03. - Pridané filtre pre elektrocvn.estranky.cz, tailormysuit.sk
+         Aktualizované filtre pre forum.w-source.net
+         Odstránený problémový filter pre lidovky.cz
 11.03. - Pridané anti-adblock filtre pre titulky.com
 05.03. - Vymazaný nevhodný filter pre primat.cz
 04.03. - Pridané filtre pre filmycz.com, mrk.cz, onlajny.com, realitygo.cz, sazka.cz, statnisprava.cz
