Aktualizovaný zoznam filtrov
Odstránený problém so zobrazením diskusie na stránke lidovky.cz

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 = Zoznam zmien =
 
+18.03. - Opravený problém so zobrazením diskusie na lidovky.cz
 17.03. - Pridané filtre pre elektrocvn.estranky.cz, tailormysuit.sk
          Aktualizované filtre pre forum.w-source.net
          Odstránený problémový filter pre lidovky.cz
