--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 = Zoznam zmien =
 
+17.04. - Pridané a aktualizované filtre pre abtou.cz, behame.sk, bmwklub.cz, bmwklub.sk, cviceni-doma.cz, edna.cz,
+         karaoketexty.cz, nova.cz, ocko.tv, onlinefilmy.tv, onlinevidea.tv, primat.cz, serialzone.cz,
+         totalpozicky.sk, zmeskanyhovor.com
 18.03. - Opravený problém so zobrazením diskusie na lidovky.cz
 17.03. - Pridané filtre pre elektrocvn.estranky.cz, tailormysuit.sk
          Aktualizované filtre pre forum.w-source.net
