Aktualizácia zoznamu filtrov
Viď CHANGELOG

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 = Zoznam zmien =
 
+05.05. - Upravený filter pre warforum.cz
 30.04. - Pridané filtre pre automoto.cas.sk, dama.cz, f1.sk, filmporno.cz a kniha.cz
 26.04. - Pridané filtre pre fdb.cz a ulozisko.sk
 25.04. - Aktualizované filtre pre uloz.to a warforum.cz
