--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 = Zoznam zmien =
 
+07.05. - Pridaný whitelist filter pre odstránenie problémus inzerátmi na stránkach autobazar.sk, bazar.sk a nehnutelnosti.sk
 05.05. - Upravený filter pre warforum.cz
 30.04. - Pridané filtre pre automoto.cas.sk, dama.cz, f1.sk, filmporno.cz a kniha.cz
 26.04. - Pridané filtre pre fdb.cz a ulozisko.sk
