--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
 = Zoznam zmien =
 
+23.05. - Odstránený filter pre zapakazel.cz
+         Pridaný filter pre videacesky.cz
 08.05. - Pridané filtre pre i-navody.cz
 07.05. - Pridaný whitelist filter pre odstránenie problémus inzerátmi na stránkach autobazar.sk, bazar.sk a nehnutelnosti.sk
          Upravený filter pre mojevideo.sk (#2 update)
