Aktualizovaný zoznam filtrov

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,11 @@
 = Zoznam zmien =
 
+25.05. - Pridané filtre pre ab-forum.info, advantage.as, denik.cz, devbook.cz, disk.cz, edna.cz, esemes.cz,
+         gamesite.sk, hudebnyraj.cz, itiscali.cz, kurzy.sfinance.cz, letemsvetemapplem.eu, maminka.cz, onlinovky.sk, 
+         pestujemeweb.cz, programujte.com, sapro.cz, serialzone.cz, spoluziaci.sk, xprovize.cz, zombiezone.cz a zvukarina.cz
+         Odstránené zastaralé filtre pre ronnie.cz a prague.cz
+         Odstránený problém pri prehrávaní videí cez exashare.com
+         Odstránený problém na autocartichy.cz
 23.05. - Odstránený filter pre zapakazel.cz
          Pridaný filter pre videacesky.cz
 08.05. - Pridané filtre pre i-navody.cz
