--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 = Zoznam zmien =
 
+07.06. - Pridané filtre pre lui-magazine.cz, ta3.sk, imr.sk, rsz.sk, uspech.sk, zachej.sk, autohit.cz, 
+         firstclass.cz, mesec.cz, serialkeys.svetu.cz, pocasie.pozri.sk
+         Pridané generálne filtre
+         Odstránený problém pri prehrávani niektorých videí na českých stránkach ako zive.cz, mobilmania.cz, e15.cz
 25.05. - Pridané filtre pre ab-forum.info, advantage.as, denik.cz, devbook.cz, disk.cz, edna.cz, esemes.cz,
          gamesite.sk, hudebnyraj.cz, itiscali.cz, kurzy.sfinance.cz, letemsvetemapplem.eu, maminka.cz, onlinovky.sk, 
          pestujemeweb.cz, programujte.com, sapro.cz, serialzone.cz, spoluziaci.sk, xprovize.cz, zombiezone.cz a zvukarina.cz
