Aktualizácia zoznamu filtrov

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 = Zoznam zmien =
 
+26.07. - Pridané rôzne filtre
 07.06. - Pridané filtre pre lui-magazine.cz, ta3.sk, imr.sk, rsz.sk, uspech.sk, zachej.sk, autohit.cz, 
          firstclass.cz, mesec.cz, serialkeys.svetu.cz, pocasie.pozri.sk
          Pridané generálne filtre
