--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 = Zoznam zmien =
 
-26.07. - Pridané rôzne filtre
+09.07. - Pridané anti-adblock filtre pre dobrenoviny.sk
+06.07. - Pridané rôzne filtre
 07.06. - Pridané filtre pre lui-magazine.cz, ta3.sk, imr.sk, rsz.sk, uspech.sk, zachej.sk, autohit.cz, 
          firstclass.cz, mesec.cz, serialkeys.svetu.cz, pocasie.pozri.sk
          Pridané generálne filtre
