--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 = Zoznam zmien =
 
+24.07. - Pridané rôzne filtre vďaka prispievateľovi
 09.07. - Pridané anti-adblock filtre pre dobrenoviny.sk
 06.07. - Pridané rôzne filtre
 07.06. - Pridané filtre pre lui-magazine.cz, ta3.sk, imr.sk, rsz.sk, uspech.sk, zachej.sk, autohit.cz, 
