--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 = Zoznam zmien =
 
+30.08. - Pridané filtre pre teevee.sk a parabola.cz
 24.07. - Pridané rôzne filtre vďaka prispievateľovi
 09.07. - Pridané anti-adblock filtre pre dobrenoviny.sk
 06.07. - Pridané rôzne filtre
