--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,16 +1,17 @@
 = Zoznam zmien =
 
+22.10. - Pridané blokovacie filtre pre stobklub.cz a teevee.sk
 01.09. - Upravený globálny filter pre stránku cars.cz
 30.08. - Pridané filtre pre teevee.sk a parabola.cz, vyriešený problém s HTML5 playerom na stream.cz (#2 update)
 24.07. - Pridané rôzne filtre vďaka prispievateľovi
 09.07. - Pridané anti-adblock filtre pre dobrenoviny.sk
 06.07. - Pridané rôzne filtre
-07.06. - Pridané filtre pre lui-magazine.cz, ta3.sk, imr.sk, rsz.sk, uspech.sk, zachej.sk, autohit.cz, 
+07.06. - Pridané filtre pre lui-magazine.cz, ta3.sk, imr.sk, rsz.sk, uspech.sk, zachej.sk, autohit.cz,
          firstclass.cz, mesec.cz, serialkeys.svetu.cz, pocasie.pozri.sk
          Pridané generálne filtre
          Odstránený problém pri prehrávani niektorých videí na českých stránkach ako zive.cz, mobilmania.cz, e15.cz
 25.05. - Pridané filtre pre ab-forum.info, advantage.as, denik.cz, devbook.cz, disk.cz, edna.cz, esemes.cz,
-         gamesite.sk, hudebnyraj.cz, itiscali.cz, kurzy.sfinance.cz, letemsvetemapplem.eu, maminka.cz, onlinovky.sk, 
+         gamesite.sk, hudebnyraj.cz, itiscali.cz, kurzy.sfinance.cz, letemsvetemapplem.eu, maminka.cz, onlinovky.sk,
          pestujemeweb.cz, programujte.com, sapro.cz, serialzone.cz, spoluziaci.sk, xprovize.cz, zombiezone.cz a zvukarina.cz
          Odstránené zastaralé filtre pre ronnie.cz a prague.cz
          Odstránený problém pri prehrávaní videí cez exashare.com
