Aktualizovaný zoznam filtrov

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 = Zoznam zmien =
 
+10.11. - Pridané blokovacie filtre pre ta3.com a mojevideo.sk, pridaný hiding filter cztorrent.net (vďaka Conder000 via GitHub)
 26.10. - Pridaný filter pre tv.seznam.cz
 22.10. - Pridané blokovacie filtre pre stobklub.cz a teevee.sk
 01.09. - Upravený globálny filter pre stránku cars.cz
