--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 = Zoznam zmien =
 
+26.11. - Pridanie whitelist filtru pre seznam.cz, z dôvodu nefungovania e-mailovej služby (GH issue #7)
 14.11. - Pridané hiding filtre pre seznam.cz
 13.11. - Pridaný blokovací filter pre youradio.cz
 10.11. - Pridané blokovacie filtre pre ta3.com, mojevideo.sk a synotliga.isport.blesk.cz, pridaný hiding filter
