Aktualizácia zoznamu filtrov

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 = Zoznam zmien =
 = 2015 =
 
+25.01. - Pridaný blokovací filter pre teevee.sk
 12.01. - Pridané blokovacie a hiding filtre pre alfa.cz, matematika.cz a milujemefilmy.eu
 
 = 2014 =
