--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,8 @@
 = Zoznam zmien =
+
 = 2015 =
 
+30.01. - Priding whitelist filter pre zive.cz (problém s vyhľadávaním)
 25.01. - Pridaný blokovací filter pre teevee.sk
 12.01. - Pridané blokovacie a hiding filtre pre alfa.cz, matematika.cz a milujemefilmy.eu
 
