--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,7 +2,8 @@
 
 = 2015 =
 
-30.01. - Priding whitelist filter pre zive.cz (problém s vyhľadávaním)
+31.01. - Pridaný whitelist filter pre mapa-mapy.sk (problém s načítaním máp)
+30.01. - Pridaný whitelist filter pre zive.cz (problém s vyhľadávaním)
 25.01. - Pridaný blokovací filter pre teevee.sk
 12.01. - Pridané blokovacie a hiding filtre pre alfa.cz, matematika.cz a milujemefilmy.eu
 
