--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,7 +2,7 @@
 
 = 2015 =
 
-03.02. - Pridané hiding filtre a blokovací filter pre idnes.cz
+03.02. - Pridané hiding filtre a blokovací filter pre idnes.cz a opravený problém s načítaním videí na stream.cz
 31.01. - Pridaný whitelist filter pre mapa-mapy.sk (problém s načítaním máp)
 30.01. - Pridaný whitelist filter pre zive.cz (problém s vyhľadávaním)
 25.01. - Pridaný blokovací filter pre teevee.sk
