--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@
 
 = 2015 =
 
+16.02. - Pridané whitelist filtre pre doupe.zive.cz (GH #11)
 15.02. - Pridaný whitelist filter kvôli obídeniu detekcie AdBlocku (GH #9)
 07.02. - Upravená detekcia AdBlocku na nova.cz
 05.02. - Pridané whitelist filtre a hiding filter pre nova.cz (vyriešená detekcia AdBlocku a neprehrávania videí)
