--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,8 @@
 
 = 2015 =
 
+03.05. - Pridaný hiding a whitelist filter pre topserialy.sk, whitelist filter pre spusti.net
+         hiding filtre pre serialycz.cz a blokovacie filtre pre ab-forum.info
 10.04. - Pridané whitelist filtre pre pcforum.sk a dobre-recepty.sk
 19.03. - Pridané filtre pre idnes.cz a topky.sk
 04.03. - Pridaný hiding a blokovací filter pre doupe.zive.cz, vyriešená detekcia AB (GH #16)
