--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@
 
 = 2015 =
 
+05.07. - Vyriešená detekcia AdBlocku vo flashx.tv playeri
 04.07. - Opäť vyriešená detekcia AdBlocku vo flashx.tv a openload.io playeri
 03.07. - Vyriešená detekcia AdBlocku - flashx.tv a topserialy.sk, pridaný whitelist filter pre automotofans.cz
 02.07. - Pridané filtre pre letemsvetemapplem.eu, in-pocasi.cz a vyriešená detekcia AdBlocku na spusti.net
