--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,8 @@
 
 = 2015 =
 
+20.07. - Vyriešená detekcia AdBlocku fo flashx.tv a openload.io video-playeri, bol vymazaný problémový filter
+         pre topserialy.sk
 05.07. - Vyriešená detekcia AdBlocku vo flashx.tv playeri
 04.07. - Opäť vyriešená detekcia AdBlocku vo flashx.tv a openload.io playeri
 03.07. - Vyriešená detekcia AdBlocku - flashx.tv a topserialy.sk, pridaný whitelist filter pre automotofans.cz
