Aktualizácia zoznamu filtrov

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@
 
 = 2015 =
 
+15.08. - Pridané filtre pre denik.cz, mobilizujeme.cz, webtrh.cz a zoznam.sk
 20.07. - Vyriešená detekcia AdBlocku fo flashx.tv a openload.io video-playeri, bol vymazaný problémový filter
          pre topserialy.sk
 05.07. - Vyriešená detekcia AdBlocku vo flashx.tv playeri
