--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,8 @@
 
 = 2015 =
 
+19.12. - Vyriešená detekcia AdBlocku na topserialy.sk a play.iprima.cz, pridané filtre pre idnes.cz a zive.cz
+         Pridané whitelist filtre pre mironet.cz
 04.11. - Vyriešená detekcia AdBlocku na topserialy.sk, pridané filtre pre automodul.cz, ctrlv.cz, idnes.cz, majnuj.cz,
          parabola.cz, webtrh.cz, zkouknito.cz, sme.sk a ulozisko.sk
 15.08. - Pridané filtre pre denik.cz, mobilizujeme.cz, webtrh.cz a zoznam.sk, vyriešená detekcia AdBlocku
